syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


option go_package = "github.com/merynayr/user/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateUserRequest) returns (CreateUserResponse);
  rpc Get(GetUserRequest) returns (GetUserResponse);
  rpc Update(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty);
}

enum role {
  USER = 0;
  ADMIN = 1;
}

message CreateUserInfo {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  role role = 5;
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserInfo {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message CreateUserRequest { 
  CreateUserInfo info = 1;
}

message CreateUserResponse { 
  int64 id = 1; 
}

message GetUserRequest { 
  int64 id = 1; 
}

message GetUserResponse { 
  User user = 1; 
}

message UpdateUserRequest {
  UpdateUserInfo info = 1;
}

message DeleteUserRequest { 
  int64 id = 1; 
}